--- a/playground/pom.xml
+++ b/playground/pom.xml
@@ -67,6 +67,12 @@
         <!--<artifactId>mybatis-plus</artifactId>-->
         <!--<version>2.0.1</version>-->
         <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.apache.ibatis</groupId>
+            <artifactId>ibatis-sqlmap</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
