2019年12月08日 Spring Security 5 表单登录的若干配置问题处理

--- a/playground/src/main/resources/application.yml
+++ b/playground/src/main/resources/application.yml
@@ -54,6 +54,10 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
 
 
 logging:
